--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <meta name="renderer" content="webkit" />
     <title>hxs-repl</title>
     <script type="text/javascript" crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/hpolyfill@latest/dist/index.js" defer="defer"></script>
-    <script type="text/javascript" crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/super-x@1.0.0/dist/super-x.umd.min.js" defer="defer"></script>
-    <script type="text/javascript" crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/3h-term@0.1.2/dist/3h-term.umd.min.js" defer="defer"></script>
-    <script type="text/javascript" crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/3h-ast@0.4.2/dist/3h-ast.umd.min.js" defer="defer"></script>
-    <script type="text/javascript" crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/hxs@0.2.1/dist/hxs.umd.min.js" defer="defer"></script>
+    <script type="text/javascript" crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/super-x@^1.0.0/dist/super-x.umd.min.js" defer="defer"></script>
+    <script type="text/javascript" crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/3h-term@^0.1.2/dist/3h-term.umd.min.js" defer="defer"></script>
+    <script type="text/javascript" crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/3h-ast@^0.4.2/dist/3h-ast.umd.min.js" defer="defer"></script>
+    <script type="text/javascript" crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/hxs@^0.3.0/dist/hxs.umd.min.js" defer="defer"></script>
 </head>
 
 <body>
